base dos projetos feito - não responsivo

--- a/src/style.scss/Main.scss
+++ b/src/style.scss/Main.scss
@@ -45,3 +45,12 @@ body{
         }
     }   
 }
+
+.containerProjeto{
+    background-color: #fff;
+    margin: auto;
+    width: 88%;
+    height: 50%;
+    box-shadow: 0 0 15px #555;
+    border-radius: 12%;
+}
