decompondo o codigo - organizando

--- a/src/style.scss/Main.scss
+++ b/src/style.scss/Main.scss
@@ -42,6 +42,7 @@ body{
         text-align: center;
         img{
             margin: auto;
+            max-width: 435px;
         }
         p{
             color: #fff;
